output-data/v0.6.0/log.txt
Run started on Fri Mar 1 14:54:24 EST 2024...

>> Running scripts/00-setup-environment.sh...

real	0m0.053s
user	0m0.008s
sys	0m0.000s

>> Running scripts/10-extract-universe-data.sh...

real	10m35.796s
user	0m25.676s
sys	0m29.398s

>> Running scripts/20-create-internal-blazegraph.sh...

DIR=$RAW_DIR/$VERSION
JNL=$DIR/blazegraph.jnl
rm -f $JNL

MESH=http://id.nlm.nih.gov/mesh/
MESH_DL=https://nlmpubs.nlm.nih.gov/projects/mesh/rdf/mesh.nt.gz

HRA_LIT_UNIVERSE=https://purl.humanatlas.io/graph/hra-lit-universe
HRA_LIT=https://purl.humanatlas.io/graph/hra-lit
CCF=https://purl.humanatlas.io/graph/ccf

run_ndjsonld() {
  QUADS=${1%.jsonld}.nq
  ndjsonld canonize $1 $QUADS -c context.jsonld 
  blazegraph-runner load --journal=$JNL "--graph=${2}" $QUADS
  rm -f $QUADS
}

run_jsonld() {
  QUADS=${1%.jsonld}.nq
  jsonld canonize $1 > $QUADS
  blazegraph-runner load --journal=$JNL "--graph=${2}" $QUADS
  rm -f $QUADS
}

# HRA-LIT Universe
run_ndjsonld $DIR/universe-publications.jsonl $HRA_LIT_UNIVERSE
file:///home/mginda/hra-lit/node_modules/ndjsonld/cli.js:23
    const contextObject = JSON.parse(readFileSync(context))?.['@context'];
                                                            ^

SyntaxError: Unexpected token '.'
    at Loader.moduleStrategy (internal/modules/esm/translators.js:133:18)
    at async link (internal/modules/esm/module_job.js:42:21)

real	0m0.183s
user	0m0.095s
sys	0m0.010s
